# gameengine2d-pro

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: msbuild_host_x64.props
docs/: CODEX_BUILD_LOG.md  DEVPOST_SUBMISSION_CHECKLIST.md
editor/: CMakeLists.txt  editor_main.cpp
editor/scripts_module/: CMakeLists.txt
editor/src/: animator_panel.hpp  auto_hot_reload.hpp  component_defs.hpp  component_registry.hpp  editor_state.hpp  editor_tools.hpp  matchmaking_panel.hpp  panels.hpp  scene_io.hpp  script_module_loader.hpp  tile_palette_panel.hpp  toolchain_discovery.hpp  unity_gap_features.hpp
engine_cpp/: CMakeLists.txt  camera.hpp  core.hpp  crash_reporter.hpp  determinism.hpp  entity.hpp  feature_systems.hpp  file_watcher.hpp  game_scripts.hpp  input_system.hpp  main.cpp  material_system.hpp  physics.hpp  physics_ext.hpp  prefab_system.hpp  render_system_vk.hpp  runtime_value.hpp  script_graph_system.hpp  script_system.hpp  systems.hpp  tile_palette.hpp  time.hpp  transform_system.hpp  unity2d_script_api.hpp
engine_cpp/engine/: bindings.cpp  core.cpp  physics.cpp  physics_ext.cpp  render_system_vk.cpp
engine_cpp/net/: lag_compensation.hpp  matchmaking.hpp  net_predict.hpp  network.hpp  player_spawn.hpp  replication.hpp  replication_props.hpp  replication_rpc.hpp  rollback.hpp  snapshot.hpp  transport.hpp
engine_cpp/tests/: runtime_safety_tests.cpp
engine_cpp/vk_render/: stb_image_impl.cpp  stb_truetype_impl.cpp  texture_system_vk.hpp  vk_buffer.hpp  vk_context.hpp  vk_font_atlas.hpp  vk_light_ubo.hpp  vk_mem_alloc_impl.cpp  vk_particle_compute.hpp  vk_post_process.hpp  vk_render_target.hpp  vk_renderer_backend.hpp  vk_sprite_batch.hpp  vk_swapchain.hpp  vk_texture.hpp
engine_cpp/vk_render/shaders/: composite.frag  composite.frag.spv  fullscreen.vert  fullscreen.vert.spv  particle.comp  particle.comp.spv  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv  sprite_custom_example.frag  sprite_custom_example.frag.spv  sprite_inst.vert  sprite_inst.vert.spv  sprite_lit.frag  sprite_lit.frag.spv  sprite_lit.vert  sprite_lit.vert.spv
games/abyss-of-hollows/: project.json  scene.json  scene_ascent.json  scene_boss.json  scene_crystal.json  scene_deep.json  scene_flooded.json  scene_home.json  scene_home.json.bak  scene_verdant.json
games/abyss-of-hollows/ProjectSettings/: EditorBuildSettings.json
games/abyss-of-hollows/assets/: AbyssPlayer1.prefab  MyShader.shadergraph.json  New Material.material  THIRD_PARTY_NOTICES.md  asset_provenance.json  event_graph_scene_boss.json  gen.py
games/abyss-of-hollows/assets/graphs/: AbyssPlayer_1015.json
games/abyss-of-hollows/scripts/: NewScript1.cpp  NewScript2.cpp  NewScript3.cpp  NewScript5.cpp  NewScript6.cpp  NewScript7.cpp  NewScript8.cpp  abyss_ability_unlock.cpp  abyss_bolt.cpp  abyss_boss.cpp  abyss_checkpoint.cpp  abyss_crawler.cpp  abyss_encounter_controller.cpp  abyss_fx_burst.cpp  abyss_lantern.cpp  abyss_lift.cpp  abyss_pause_controller.cpp  abyss_pickup.cpp  abyss_player.cpp  abyss_progression_manager.cpp  abyss_seal.cpp  abyss_slash.cpp  abyss_spitter.cpp  abyss_turret.cpp  game_scripts.hpp
games/abyss-of-hollows/tools/: author_campaign_maps.py  author_region_vistas.py
games/game7/: project.json  scene_ascent.json  scene_deep.json  scene_flooded.json
games/game7/ProjectSettings/: EditorBuildSettings.json  ProjectSettings.json
games/game7/assets/: AbyssPlayer.prefab  NewPrefab.prefab  NewPrefab1.prefab  THIRD_PARTY_NOTICES.md  abc.material
games/game7/assets/graphs/: HudCombo_1014.json
games/game7/assets/shaders/: MyShader.frag
games/game7/assets/tile_palettes/New_Tile_Palette/: New_Tile_Palette.tilepalette.json
games/game7/scripts/: NewScript.cpp  NewScript10.cpp  NewScript4.cpp  NewScript9.cpp  abyss_ability_gate.cpp  abyss_ambient_drift.cpp  abyss_crawler.cpp  abyss_fx.hpp  abyss_menu_controller.cpp  abyss_portal.cpp  abyss_progression_manager.cpp  abyss_room.cpp  abyss_seal.cpp  abyss_shard.cpp  abyss_shared.hpp  tilemap_terrain_generator.cpp
games/game7/tools/: author_campaign_maps.py  author_region_vistas.py
hub/: CMakeLists.txt  CopyTemplate.cmake  hub_main.cpp  hub_renderer.hpp  project_manifest.hpp
hub/assets/: README.md
hub/tests/: hub_tests.cpp
installer/: GameEngine2DPro.iss  README.md  THIRD_PARTY_NOTICES.md
scripts/: build_installer.ps1  build_linux.sh  build_windows.bat  fetch_deps.py
